Implementacion  de endpoints para ventas y arreglos de errores