@@ -13,6 +13,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -24,7 +25,10 @@ public class ProductServiceImpl implements ProductService {
 
     @Override
     public List<ProductResponseDTO> getAll() {
-        return productRepository.findAll().stream().map(productMapper::toResponseDTO).toList();
+        System.out.println(productRepository.findAll());
+        return productRepository.findAll().stream().map(
+                productMapper::toResponseDTO
+        ).collect(Collectors.toList());
     }
 
     @Override
